data/derived/comb/progs/unify/prog7378.ml.out
Characters 147-173:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type 'a * 'b
